hoàn thành usermenu

--- a/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/MainWindow.xaml
+++ b/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Phanmemtinhtoanmongcoc"
+        xmlns:Usercontrols="clr-namespace:Phanmemtinhtoanmongcoc.Usercontrols"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
@@ -12,5 +13,6 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
+        <Usercontrols:Usermenu Grid.Row="0"/>
     </Grid>
 </Window>
