--- a/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/Usercontrols/Usermenu.xaml
+++ b/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/Usercontrols/Usermenu.xaml
@@ -5,8 +5,20 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Phanmemtinhtoanmongcoc.Usercontrols"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="150" d:DesignWidth="800">
     <Grid>
-            
+        <Ribbon>
+            <RibbonTab Header="Nhập liệu">
+                <RibbonGroup Header="Thông số đất">
+                    <RibbonButton Label="Chỉ số cơ lý" SmallImageSource="/Assets/icons/địa chất.jpg"/>
+                </RibbonGroup>
+
+                <RibbonGroup Header="Vật liêu">
+                    <RibbonButton Label="Bê tông" SmallImageSource="/Assets/icons/Bê tông.jpg"/>
+                </RibbonGroup>
+            </RibbonTab>
+        </Ribbon>
+
+
     </Grid>
 </UserControl>
