--- a/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/Usercontrols/Usermain.xaml
+++ b/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/Usercontrols/Usermain.xaml
@@ -5,8 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Phanmemtinhtoanmongcoc.Usercontrols"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="250" d:DesignWidth="800">
     <Grid>
-            
+            <Image Stretch="Fill" Source="/Assets/images/giao diện.jpg" />
+
     </Grid>
 </UserControl>
