--- a/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/Usercontrols/Userstatus.xaml
+++ b/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/Usercontrols/Userstatus.xaml
@@ -5,8 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Phanmemtinhtoanmongcoc.Usercontrols"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+             d:DesignHeight="50" d:DesignWidth="800">
+    <Grid Background="skyblue">
+		
+		
             
     </Grid>
 </UserControl>
