--- a/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/MainWindow.xaml
+++ b/Phanmemtinhtoanmongcoc/Phanmemtinhtoanmongcoc/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Phanmemtinhtoanmongcoc"
-        xmlns:Usercontrols="clr-namespace:Phanmemtinhtoanmongcoc.Usercontrols"
+        xmlns:UserControls="clr-namespace:Phanmemtinhtoanmongcoc.Usercontrols"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
@@ -14,11 +14,11 @@
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
         
-        <Usercontrols:Userstatus Grid.Row="2"/>
+        <UserControls:Userstatus Grid.Row="2"/>
    
-        <Usercontrols:Usermain Grid.Row="1" />
+        <UserControls:Usermain Grid.Row="1" />
 
-        <Usercontrols:Usermenu Grid.Row="0"/>
+        <UserControls:Usermenu Grid.Row="0"/>
     </Grid>
     
 </Window>
